# cook-cpp

./: .clang-format  .gitignore  .gitmodules  .tool-versions  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
assets/scripts/: install_dependencies.sh  resolve.sh
cmakes/: arrow.cmake  basic.cmake  boost.cmake  brpc.cmake  cassandra.cmake  default.cmake  fbs.cmake  fmt.cmake  gperftools.cmake  grpc.cmake  gtests.cmake  mongo.cmake  pb.cmake  rapidjson.cmake  sample.cmake  seastar.cmake  socket.cmake  study.cmake  thread.cmake  utils.cmake
gtests/: gtests_main.cpp
gtests/brpc/: gtests_bvar.cpp
include/basic/: complex_example.h  cpp.h  fast_read_map.h  sample_structs.h
include/sample/simple/: template_class.h
include/study/: clang_format.h
include/study/socket/basic/: server.h
include/utils/: object_pool.h  safe_map.h  simple_object_pool.h  utils.h
src/: main.cc
src/basic/: base_chrono.cpp  base_condition_variable.cpp  base_mutex.cpp  basic_atomic.cpp  basic_init_list.cpp  basic_ptr_1.cpp  basic_stl_find.cc  basic_str.cpp  basic_str_v2.cc  basic_thread.cpp  complex_example.cpp  cpp.cpp  sample_a.cpp  sample_b.cpp  sample_c.cpp  sample_d.cpp  sample_e.cpp  sample_f.cpp  sample_g.cpp  sample_g_b.cpp  sample_h.cpp  sample_i.cpp  sample_j.cpp  template.cpp
src/sample/: boost.cpp  fmt.cpp  hello.cpp  lmd.cpp  lsp.cpp  sample_data_type.cc
src/sample/boost/: preprocess.cpp  sample.cpp  string_join.cpp
src/sample/fmt/: fmt.cpp
src/sample/mongo/: bsoncxx.cpp  mongo.cpp
src/sample/seastar/: seastar_future.cpp  seastar_metric.cpp  seastar_sample.cpp  seastar_server.cpp  seastar_socket.cpp
src/sample/simple/: parameter_pack.cpp  simple.cpp  template_class.cpp  template_retrieve.cpp  tuple.cpp
src/sample/thread/: thread_test.cpp  thread_test_2.cpp
src/study/atomic/: atomic_a.cpp
src/study/others/: s01.cpp
src/study/socket/: echo_server.cpp
src/study/socket/basic/: client.cpp  client.h  client_epoll.cpp  server.cpp  server.h  server_epoll.cpp  server_epoll.h
src/study/socket/echo_service/: echo_client.cpp  echo_client_epoll.cpp  echo_server.cpp  echo_server_epoll.cpp
src/study/thread/: thread_c.cpp  thread_cpp.cpp
src/tutorial/: sample.cpp  smp.cpp
src/tutorial/arrow/: CMakeLists.txt  arrow_acero.cc  arrow_gandiva.cc  arrow_main.cc  arrow_startup.cc  arrow_utils.cc  arrow_utils.h  sample_data_type.cpp
src/tutorial/babylon/: CMakeLists.txt  babylon_start.cc  babylon_start.h  main.cc
src/tutorial/brpc/: echo_client.cpp  echo_service.cpp  sample_brpc.cpp
src/tutorial/brpc/proto/: echo.proto
src/tutorial/cassandra/: basic.cpp
src/tutorial/flatbuffers/: fb.cpp
src/tutorial/flatbuffers/protos/: sample.fbs
src/tutorial/fmt/: fmt_b.cpp
src/tutorial/gperftools/: pf.cpp
src/tutorial/grpc/: sample_server.cpp
src/tutorial/grpc/protos/: sample_service.proto
src/tutorial/pb/: test_pb.cpp  test_pb_b.cpp
src/tutorial/pb/protos/: hello.proto  mv.proto
src/tutorial/pb/protos/package/: package_example.proto
src/tutorial/rapidjson/: rj.cpp
src/tutorial/seastar/: sample_seastar.cpp  seastar_in_out.cpp
src/utils/: object_pool.cpp  utils.cpp
